[project]
name = "personal-finance-env"
version = "1.0.0"
description = "OpenEnv Personal Finance Manager"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
